# dhafnck_mcp

./: .env.backup.20250825_121357  .env.backup.20250827_131747  .env.example  .env.secure.example  .gitignore  .gitmodules  .mcp.json  BACKUP_RESTORE_PROCEDURE.md  CHANGELOG.md  CHANGELOG_CONDENSED.md  CLAUDE.local.md  CLAUDE.md  DEPENDENCY_FIX_SUMMARY.md  DOCKER_CLI_GUIDE.md  FINAL_VALIDATION_REPORT.md  JWT_FIX_TASKS.md  LICENSE  Makefile  PERFORMANCE_FIX.md  README.md  SECURITY_INCIDENT_RESPONSE.md  TEST-CHANGELOG.md  ___root___  agent_capability_fix_report.md  check_table_schema.py  claude_wsl_setup.md  clean-secrets.sh  clean_supabase_curl.sh  clean_supabase_data.py  clean_supabase_tables.sql  clear-cookies.html  create_missing_tables.py  database_manager.py  debug_agent_assignment.py  debug_task_persistence_local.py  debug_test.py  debug_vision_test.py  dhafnck_mcp.db.bak-20250715-085530  dhafnck_mcp.db.bak-20250715-090855  dhafnck_mcp.db.bak-20250715-101850  (+64 more)
dhafnck-db-server/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
dhafnck-db-server/docker/: Dockerfile
dhafnck-db-server/migrations/: 001_task_management_schema.sql  002_template_checklist_schema.sql
dhafnck_mcp_main/: .dockerignore  .env.development  .env.example  .env.supabase  .env.supabase.template  .env.test  .pytest-parallel.ini  AGGRESSIVE_TEST_FINDINGS.md  ALL_CASES_TEST_REPORT.md  CONTROLLER_REFACTORING_PLAN.md  DATABASE_SETUP.md  DATA_MISMATCH_RESOLUTION.md  DIAGNOSTIC_REPORT.md  ENV_SETUP_README.md  FINAL_COMPREHENSIVE_ANALYSIS.md  FINAL_PERFORMANCE_TEST_RESULTS.md  FINAL_PROBLEM_ANALYSIS.md  FRONTEND_ISSUE_SOLUTION.md  HIERARCHICAL_CONTEXT_SYSTEM_INVESTIGATION_REPORT.md  MCP_INSPECTOR_GUIDE.md  PROJECT_SPECIFIC_SETUP.md  README.md  README_TROUBLESHOOTING.md  SERVER_VERIFICATION_REPORT.md  SERVICE_UPDATE_CHECKLIST.md  SETUP.md  SUPABASE_OPTIMIZATION_RESULTS.md  TASK_MANAGER_AGENT_GUIDE.md  TEST-CHANGELOG.md  TEST_ISOLATION_IMPLEMENTATION.md  USER_ISOLATION_UPDATE_REPORT.md  WSL_MCP_TROUBLESHOOTING_GUIDE.md  architecture_test_report.md  architecture_test_report.txt  claude_desktop_config.json  claude_desktop_config_stdio.json  configure_claude_code.sh  debug_backup_system.py  debug_branch_context.py  debug_database_lock.py  (+80 more)
dhafnck_mcp_main/00_RULES/: P00-S00-T01-Core Mechanic Systems.md
dhafnck_mcp_main/config/: .env.vision.example  vision_hierarchy.json  vision_system_config.yaml
dhafnck_mcp_main/configuration/: env.example  mcp-template.json  mcp.json  mcp_project_template.json
dhafnck_mcp_main/docker/: Dockerfile  Dockerfile.optimized  README_DATABASE_TOOLS.md  README_DOCKER.md  backup_verification.py  database_restore_verification.py  docker-compose.dev-fast.yml  docker-compose.local-db.yml  docker-compose.local.yml  docker-compose.postgresql.yml  docker-compose.redis.yml  docker-compose.supabase.yml  docker-compose.yml  mcp-docker.py  rebuild-fix-rules.sh  redis.conf  restore_database.py
dhafnck_mcp_main/docs/: API_REFERENCE.md  BREAKING_CHANGES_SUMMARY.md  COMPREHENSIVE_TROUBLESHOOTING_GUIDE.md  CURSOR_INTEGRATION_GUIDE.md  CURSOR_MCP_SETUP.md  CURSOR_SETUP.md  DATABASE_MODE_CONFIGURATION.md  DDD_Connection_Management_Architecture.md  DDD_Migration_Troubleshooting_Guide.md  DEPLOYMENT_READINESS.md  DEVELOPMENT_GUIDE.md  DOCKER.md  DOCKER_LOCAL_SETUP.md  DOCKER_REBUILD_CONNECTION_FIX.md  DOCKER_SETUP_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REPORT.md  DOCUMENTATION_UPDATE_REPORT.md  DUAL_MODE_CONFIGURATION.md  GETTING_STARTED.md  INSIGHTS_FOUND_PARAMETER_FIX_SOLUTION.md  LAUNCH_ANNOUNCEMENT.md  LAUNCH_GUIDE.md  MCP_INSPECTOR_GUIDE.md  MCP_STATUS_ICON_SOLUTION.md  MCP_TOKEN_AUTHENTICATION.md  MCP_TOOLS_STATUS_REPORT.md  MCP_TOOLS_TESTING_REPORT.md  MCP_TOOLS_TESTING_RESULTS.md  MCP_TOOLS_TEST_REPORT.md  POSTGRESQL_TDD_FIXES_SUMMARY.md  POSTGRESQL_TEST_MIGRATION_SUMMARY.md  POST_FIX_UPDATE_REPORT_2025_08_09.md  PROJECT_SPECIFIC_SETUP.md  README.md  SECURE_HEALTH_CHECK.md  SEPARATE_TOOL_WITH_DOCUMENT_ARCHITECT_SYSTEM.md  SYSTEM_DOCUMENTATION.md  TASK_MANAGER_AGENT_GUIDE.md  USER_GUIDE.md  (+14 more)
dhafnck_mcp_main/examples/: mcp-client-config.json  security_demonstration.py
dhafnck_mcp_main/migration_prompts/: 01_project_repository_migration.md  02_hierarchical_context_migration.md  03_agent_repository_migration.md  04_subtask_repository_migration.md  05_git_branch_repository_migration.md  06_template_repository_migration.md  07_remove_sqlite_dependencies.md  08_label_vision_repositories.md  09_factory_updates_batch.md  10_integration_testing.md  README.md
dhafnck_mcp_main/rules/: test_rule.md
dhafnck_mcp_main/scripts/: README.md  README_SCRIPT.md  add_uuid_validation_to_controllers.py  analyze_architecture_compliance.py  analyze_architecture_compliance_enhanced.py  analyze_architecture_compliance_v7.py  apply_standardized_responses.py  batch_update_services.py  check_cursor_logs.sh  cleanup_test_labels.py  create_migration_tasks.py  debug_context_issue.py  debug_frontend_tasks.py  deploy-frontend.sh  deploy-mvp.sh  dev-docker.sh  dev-entrypoint.sh  diagnose_mcp_connection.sh  diagnostic_connect.sh  docker-entrypoint-optimized.sh  docker-entrypoint.sh  fix_frontend_authentication.py  fix_missing_user_id_columns.py  fix_postgresql_tests.py  fix_status_constraint.py  fix_task_counts.py  fix_token_metadata.py  fix_yaml_json_formatting.py  init_database.py  jwt-audience-validation-test.py  jwt-authentication-verification.py  manage-docker.sh  manage_container.sh  migrate_project_contexts.py  migrate_to_postgresql.py  migration_validation_report.txt  migration_validation_results.json  publish-docker.sh  quick-jwt-check.py  run-docker-local.sh  (+36 more)
dhafnck_mcp_main/src/: hot_reload_test.py  mcp_bridge.py  mcp_http_server.py  mock_supabase.py  simple_server.py  test_server.py
dhafnck_mcp_main/tests/: conftest.py  demo_isolated_testing.py  test_data_synchronization.py  test_environment_config.py  test_examples.py  test_git_branch_orm.py  test_hierarchical_context_orm.py  test_mcp_integration.py  test_subtask_assignees_bug.py  test_subtask_assignees_fix.py  (+2 more)
rules/: DNA.json  (+355 more)
(+4333 files in other folders)
